<resources>
    <string name="app_name">MyApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Profile">Profile</string>
    <string name="ShareApp">Share App</string>
    <string name="Help">Favorite</string>
    <string name="Settings">Settings</string>
    <string name="SignOut">SignOut</string>
</resources>